<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uwaterloo.cs349.simongame.buttonNumberActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_button_number"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/OneButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/TwoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/ThreeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/FourButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/FiveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:elevation="0dp"
        android:text="@string/SixButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

</android.support.constraint.ConstraintLayout>
